--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 12:04:00 PM</p>
+    <p class="lastupdate">09/06/2020 12:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">103.1&#176;F</td>
+        <td class="data">103.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">103.1&#176;F</td>
+        <td class="data">103.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">103.1&#176;F</td>
+        <td class="data">103.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.2&#176;F</td>
+        <td class="data">53.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">20%</td>
+        <td class="data">19%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.918 inHg (-0.033)</td>
+        <td class="data">29.911 inHg (-0.038)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph N (0&#176;)</td>
+        <td class="data">4 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.6&#176;F</td>
+        <td class="data">83.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:02:58 PM">
-            103.1</span><br/>
+          <span title="12:07:14 PM">
+            103.7</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:02:58 PM (Sunday)">
-            103.1</span><br/>
+          <span title="12:07:14 PM (Sunday)">
+            103.7</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:02:58 PM" class="hival">
-            103.1</span>
+          <span title="12:07:14 PM" class="hival">
+            103.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:02:58 PM (Sunday)" class="hival">
-            103.1</span>
+          <span title="12:07:14 PM (Sunday)" class="hival">
+            103.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:12:31 AM">
             49</span><br/>
-          <span title="11:57:48 AM">
-            20</span>
+          <span title="12:08:54 PM">
+            19</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:12:31 AM (Sunday)">
             49</span><br/>
-          <span title="11:57:48 AM (Sunday)">
-            20</span>
+          <span title="12:08:54 PM (Sunday)">
+            19</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 21 hours, 17 minutes</td>
+      <td class="data">4 days, 21 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 21 hours, 17 minutes</td>
+      <td class="data">4 days, 21 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
