--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 12:24:00 PM</p>
+    <p class="lastupdate">09/06/2020 12:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">106.4&#176;F</td>
+        <td class="data">107.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">106.4&#176;F</td>
+        <td class="data">107.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">106.4&#176;F</td>
+        <td class="data">107.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.4&#176;F</td>
+        <td class="data">52.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.907 inHg (-0.040)</td>
+        <td class="data">29.903 inHg (-0.044)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NE (45&#176;)</td>
+        <td class="data">4 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">84.0&#176;F</td>
+        <td class="data">84.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:23:38 PM">
-            106.4</span><br/>
+          <span title="12:28:06 PM">
+            107.0</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:23:38 PM (Sunday)">
-            106.4</span><br/>
+          <span title="12:28:06 PM (Sunday)">
+            107.0</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:23:38 PM" class="hival">
-            106.4</span>
+          <span title="12:28:06 PM" class="hival">
+            107.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:23:38 PM (Sunday)" class="hival">
-            106.4</span>
+          <span title="12:28:06 PM (Sunday)" class="hival">
+            107.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="12:26:01 AM">
-            29.907</span>
+          <span title="12:28:02 PM">
+            29.903</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="12:26:01 AM (Sunday)">
-            29.907</span>
+          <span title="12:28:02 PM (Sunday)">
+            29.903</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="10:45:58 AM">
-            9</span><br/>
-          346
+          <span title="12:26:08 PM">
+            11</span><br/>
+          13
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:45:58 AM (Sunday)">
-            9</span><br/>
-          346
+          <span title="12:26:08 PM (Sunday)">
+            11</span><br/>
+          13
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 01:02:40 PM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 21 hours, 37 minutes</td>
+      <td class="data">4 days, 21 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 21 hours, 37 minutes</td>
+      <td class="data">4 days, 21 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
