--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 12:39:00 PM</p>
+    <p class="lastupdate">09/06/2020 12:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.8&#176;F</td>
+        <td class="data">52.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">17%</td>
+        <td class="data">16%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.906 inHg (-0.044)</td>
+        <td class="data">29.903 inHg (-0.046)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph E (90&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">84.3&#176;F</td>
+        <td class="data">84.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:38:30 PM">
-            108.1</span><br/>
+          <span title="12:41:46 PM">
+            108.3</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:38:30 PM (Sunday)">
-            108.1</span><br/>
+          <span title="12:41:46 PM (Sunday)">
+            108.3</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:38:30 PM" class="hival">
-            108.1</span>
+          <span title="12:41:46 PM" class="hival">
+            108.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:38:30 PM (Sunday)" class="hival">
-            108.1</span>
+          <span title="12:41:46 PM (Sunday)" class="hival">
+            108.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:12:31 AM">
             49</span><br/>
-          <span title="12:20:52 PM">
-            17</span>
+          <span title="12:40:30 PM">
+            16</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:12:31 AM (Sunday)">
             49</span><br/>
-          <span title="12:20:52 PM (Sunday)">
-            17</span>
+          <span title="12:40:30 PM (Sunday)">
+            16</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 21 hours, 52 minutes</td>
+      <td class="data">4 days, 21 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 21 hours, 52 minutes</td>
+      <td class="data">4 days, 21 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
