--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 12:49:00 PM</p>
+    <p class="lastupdate">09/06/2020 12:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">108.1&#176;F</td>
+        <td class="data">108.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">108.1&#176;F</td>
+        <td class="data">108.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">108.1&#176;F</td>
+        <td class="data">108.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.1&#176;F</td>
+        <td class="data">52.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.900 inHg (-0.051)</td>
+        <td class="data">29.899 inHg (-0.053)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph E (90&#176;)</td>
+        <td class="data">1 mph ESE (112&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">84.6&#176;F</td>
+        <td class="data">84.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:41:46 PM">
-            108.3</span><br/>
+          <span title="12:53:54 PM">
+            108.8</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:41:46 PM (Sunday)">
-            108.3</span><br/>
+          <span title="12:53:54 PM (Sunday)">
+            108.8</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:41:46 PM" class="hival">
-            108.3</span>
+          <span title="12:53:54 PM" class="hival">
+            108.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:41:46 PM (Sunday)" class="hival">
-            108.3</span>
+          <span title="12:53:54 PM (Sunday)" class="hival">
+            108.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="12:45:02 PM">
-            29.899</span>
+          <span title="12:51:02 PM">
+            29.898</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="12:45:02 PM (Sunday)">
-            29.899</span>
+          <span title="12:51:02 PM (Sunday)">
+            29.898</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 22 hours, 2 minutes</td>
+      <td class="data">4 days, 22 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 22 hours, 2 minutes</td>
+      <td class="data">4 days, 22 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
